# AndroidProtector

./: .gitignore  AGENTS.md  AI_INIT_GUIDE.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.codex/: CHANGELOG.md  settings.json
.codex/agents/: arch-review.md  cpp-memory-review.md  proactive-correction.md  resource-sync.md
.codex/hooks/: check-review-needed.sh  post-edit-tracker.sh
.codex/references/: _scan.json  android-loader.md  conventions.md  dependencies.md  frontend.md  tauri-core.md
.codex/rules/: conflict_resolution.md  project_rule.md
.codex/scripts/: gen_references.py
.codex/skills/code_review/: SKILL.md
.codex/skills/performance_check/: SKILL.md
.codex/skills/plan_mode/: SKILL.md
.codex/skills/project_initialization/: SKILL.md
.github/workflows/: ci.yml
docs/: ROADMAP.md
loader-android/: build.gradle.kts  settings.gradle.kts
loader-android/protector-loader/: build.gradle.kts
loader-android/protector-loader/src/main/cpp/: CMakeLists.txt  protector_vm.cpp
scripts/: build-release.bat  build-release.ps1  prepare_loader_artifacts.ps1
scripts/package_cli/: README.md  build-portable.bat  build-portable.sh  macos.sh  windows.bat
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: channel.rs  commands.rs  crypto.rs  dex.rs  jobs.rs  lib.rs  loader.rs  main.rs  manifest.rs  models.rs  protect.rs  scan.rs  settings.rs  signing.rs  toolchain.rs  vmp.rs
tools/: README.md
tools/loader/: classes.dex
(+3 files in other folders)
