[package]
name = "android-protector-desktop"
version = "0.1.0"
description = "Cross-platform Android APK/AAB third-generation hardening tool"
authors = ["Codex"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "android_protector_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "android-protector-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-dialog = "2.2.0"
tempfile = "3.15.0"
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }

